# ocs-duckdb-runner

./: .clang-format  CMakeLists.txt  README.md  pthread-helper.h  runner.cc  time.h
